istio/samples/frontend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-frontend 
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - match:
    - uri:
        prefix: /demo-frontend
#   - uri:
#        exact: /login
#    - uri:
#        exact: /logout
#    - uri:
#        prefix: /api/v1/products
    route:
    - destination:
        host: demo-frontend 
        port:
          number: 8081
